update to new computations

--- a/notebooks/SNR_scatter_plot.ipynb
+++ b/notebooks/SNR_scatter_plot.ipynb
@@ -2,25 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0421d571",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from project_catalog.utils import get_galactic_binary_names, check_detected\n",
+    "from project_catalog.utils import get_galactic_binary_names\n",
     "from project_catalog.galactic_binary import GalacticBinary\n",
     "from project_catalog import compute_1d_hdrs, compute_sky_location_hdr, compute_8d_hdr\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import pandas as pd\n",
+    "import gbgpu\n",
     "import numpy as np\n",
     "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f500b74b",
    "metadata": {},
    "outputs": [],
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0dfbeb2a",
    "metadata": {},
    "outputs": [],
@@ -40,15 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ea851338",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d3a5d53a",
    "metadata": {},
    "outputs": [
@@ -56,13 +49,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded LDC0023810973 with 2013 samples and 1 candidates.\n"
+      "Loaded LDC0029245735 with 2827 samples and 1 possible injection matches.\n"
      ]
     }
    ],
    "source": [
     "gb = GalacticBinary.load_feather(names[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "79d27350",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_get_snr():\n",
+    "    gb = gbgpu.GBGPU()\n",
+    "    time = np.arange(0, YRSID_SI, 5.0)\n",
+    "    f = np.fft.rfftfreq(len(time), d=5.0)[1:]\n",
+    "    data = [np.zeros(len(f)), np.zeros(len(f))]\n",
+    "    sens_mat3 = AE1SensitivityMatrix(\n",
+    "        f,\n",
+    "        stochastic_params=(1.0 * YRSID_SI,),\n",
+    "        model=lisa_models.sangria,\n",
+    "    )\n",
+    "    def get_snr(params_dict):\n",
+    "        # name = params_dict['Name']\n",
+    "        amp = params_dict['Amplitude']\n",
+    "        f0 = params_dict['Frequency']\n",
+    "        fdot = params_dict['Frequency Derivative']\n",
+    "        fddot = 0.0\n",
+    "        phi0 = params_dict['Initial Phase']\n",
+    "        iota = params_dict['Inclination']\n",
+    "        psi = params_dict['Polarization']\n",
+    "        lam = params_dict['Ecliptic Longitude']\n",
+    "        beta = params_dict['Ecliptic Latitude']\n",
+    "\n",
+    "        params = np.array([amp, f0, fdot, fddot, phi0, iota, psi, lam, beta])\n",
+    "        gb.d_d = 0.0\n",
+    "        gb.get_ll(params, data, sens_mat3)[0]\n",
+    "        return np.sqrt(np.real(gb.h_h))\n",
+    "    return get_snr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "232087fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a8b6bc8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8a2a6cb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'GalacticBinary' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m gb = \u001b[43mGalacticBinary\u001b[49m.load_feather(names[\u001b[32m0\u001b[39m])\n",
+      "\u001b[31mNameError\u001b[39m: name 'GalacticBinary' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "gb = GalacticBinary.load_feather(names[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85580d48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5493406",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99d45bab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
