--- a/notebooks/compute_values/compute_match_sangria.ipynb
+++ b/notebooks/compute_values/compute_match_sangria.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "786643b3",
    "metadata": {},
    "outputs": [],
@@ -62,12 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3f35b96d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_feather('../data/sangria_ucb_params.feather')"
+    "df = pd.read_feather('../../data/sangria_ucb_params.feather')"
    ]
   },
   {
@@ -1160,7 +1160,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "catalogs",
+   "display_name": "wandering_sol",
    "language": "python",
    "name": "python3"
   },
